--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include connexion/vendor/swagger-ui *
 include *.txt
 include *.rst
+recursive-include connexion/openapi_spec_validator/resources *
